# telnyx-fastrtc

./: .env.example  .gitignore  README.md  app.py  index.html  pyproject.toml  requirements.txt  rtcserver.py
static/: client.js
