[project]
name = "webhooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastrtc[stt,tts,vad]>=0.0.25",
    "telnyx>=2.1.5",
    "fastapi==0.115.12",
    "uvicorn==0.34.1",
    "langchain==0.3.23",
    "langchain-ollama==0.3.2",
    "python-dotenv==1.1.0",
    "requests~=2.32.3",
    "websockets~=15.0.1",
    "librosa~=0.11.0",
    "aiohttp~=3.11.16",
    "pydantic~=2.11.3",
]
